@@ -3,6 +3,7 @@ Version: 0.3.4
 Date: 2021-01-16
   Changes:
     - Remindertask: show requestet amount as tooltip 
+    - [tech] event handling allows more than one registration for any event
   Bugfixes:
     - fixing crash when loading save file after settings changed
     - fixing only positive integers are allowed at select reminder count
